mobile logo spacing - more fixes

--- a/style.css
+++ b/style.css
@@ -736,7 +736,7 @@ align-content: center;
 
 
 .titleLogo {
-    margin: 40% auto 5% auto;
+    margin: 55% auto 5% auto;
     text-align: center;
     
   }
